--- a/svl-lab/package.json
+++ b/svl-lab/package.json
@@ -19,6 +19,8 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
