--- a/svl-lab/package.json
+++ b/svl-lab/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.21.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
@@ -22,14 +23,16 @@
     "@visx/text": "^3.3.0",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.11.10",
     "i": "^0.3.7",
     "npm": "^10.9.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-router-dom": "^6.27.0",
     "simplex-noise": "^4.0.3",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
